# Electromagnetic-Gripper

./: README.md
models/: Gripper Assembly .step
source_codes/MCU_firmware/mbzirc_gripper_firmware/: mbzirc_gripper_firmware.ino
source_codes/mrs_gripper_rosnode/: package.xml
source_codes/mrs_gripper_rosnode/launch/: uav.launch
source_codes/mrs_gripper_rosnode/src/: mrs_gripper.cpp
